# midi-capture-rs

./: Cargo.toml  Makefile
examples/: nano_kontrol2.rs
src/: error.rs  lib.rs
src/parser/: midimix.rs  mod.rs  nano_control2.rs
