[package]
name = "midi-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.8"
libc = "0.2.149"
log = "0.4.20"
thiserror = "1"

[features]
default = []
nano_kontrol2 = []

[[example]]
name = "nano_kontrol2"
required-features = ["nano_kontrol2"]
